# DBMS

./: CMakeLists.txt  Makefile  README.md  auth.cpp  auth.h  main  main.cpp  mlinql  test.mql  users.json
data/: ass.json  geto.json
data/esHX/: beto.json  test.json
data/lDWe/: a.json
src/: Generator.cpp  Generator.h  Menu.cpp  Menu.h  Parser.cpp  Parser.h  Tokenizer.cpp  Tokenizer.h  User.cpp  User.h
